@@ -565,40 +565,3 @@ QList<QSslCertificate> QXmppConfiguration::caCertificates() const
 {
     return d->caCertificates;
 }
-
-// obsolete
-
-/// \cond
-QXmppConfiguration::SASLAuthMechanism QXmppConfiguration::sASLAuthMechanism() const
-{
-    if (d->saslAuthMechanism == "PLAIN")
-        return SASLPlain;
-    else if (d->saslAuthMechanism == "DIGEST-MD5")
-        return SASLDigestMD5;
-    else if (d->saslAuthMechanism == "ANONYMOUS")
-        return SASLAnonymous;
-    else if (d->saslAuthMechanism == "X-FACEBOOK-PLATFORM")
-        return SASLXFacebookPlatform;
-    else
-        return SASLDigestMD5;
-}
-
-void QXmppConfiguration::setSASLAuthMechanism(
-        QXmppConfiguration::SASLAuthMechanism mech)
-{
-    switch (mech) {
-    case QXmppConfiguration::SASLPlain:
-        d->saslAuthMechanism = "PLAIN";
-        break;
-    case QXmppConfiguration::SASLDigestMD5:
-        d->saslAuthMechanism = "DIGEST-MD5";
-        break;
-    case QXmppConfiguration::SASLAnonymous:
-        d->saslAuthMechanism = "ANONYMOUS";
-        break;
-    case QXmppConfiguration::SASLXFacebookPlatform:
-        d->saslAuthMechanism = "X-FACEBOOK-PLATFORM";
-        break;
-    }
-}
-/// \endcond
